--- a/src/main/webapp/WEB-INF/velocity/home.vm
+++ b/src/main/webapp/WEB-INF/velocity/home.vm
@@ -2,14 +2,26 @@
 <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 <script type="text/javascript" charset="utf8"
         src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.js"></script>
+<script type="text/javascript" src="../../resources/DT_bootstrap.js">
+</script>
 <script type="text/javascript">
     $(document).ready(function () {
-        $("#companies").dataTable({
+        $("#emptable").dataTable({
 
             "sAjaxSource": "/datatables",
             "bServerSide": true,
-            "sPaginationType": "full_numbers",
             "bJQueryUI": true,
+            "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
+            "sPaginationType": "bootstrap",
+            "oLanguage": {
+                "sLengthMenu": "_MENU_ records per page"
+            },
+            "iDisplayLength": 5,
+            "aLengthMenu": [
+                [5, 10, 25, -1],
+                [5, 10, 25, "All"]
+            ],
+            "bProcessing": true,
             "aoColumns": [
                 { "mDataProp": "id" },
                 { "mDataProp": "firstName" },
@@ -17,77 +29,210 @@
                 { "mDataProp": "salary" },
                 { "mDataProp": "birthDate" },
                 { "mDataProp": "active" },
-                { "mDataProp": "division" },
+                { "mDataProp": "division" }
 
             ]
         });
     });
 </script>
+
+<script type="text/javascript">
+
+    $(function () {
+        $('#birthDate').datepicker({
+
+            firstDay: 1,
+            dateFormat: 'dd-mm-yy'
+        });
+    });
+</script>
+
+<style>
+    label.valid {
+        width: 24px;
+        height: 24px;
+        background: url(/static/img/valid.png) center center no-repeat;
+        display: inline-block;
+        text-indent: -9999px;
+    }
+
+    label.error {
+        font-weight: bold;
+        color: red;
+        padding: 2px 8px;
+        margin-top: 2px;
+    }
+</style>
+
+<style>
+    .span7 {
+        background-color: #eee;
+        border: 1px solid #888;
+        border-radius: 3px;
+    }
+</style>
+#*
+<script type="text/javascript">
+    function collectFormData(fields) {
+        var data = {};
+        for (var i = 0; i < fields.length; i++) {
+            var $item = $(fields[i]);
+            data[$item.attr('name')] = $item.val();
+        }
+        return data;
+    }
+  </script>
+<script type="text/javascript">
+    $(document).on("click","#submitButton",function(){
+        var $inputs = $form.find('input');
+        var data = collectFormData($inputs);
+        alert (data);
+    })
+</script>*#
 <html>
-<head><title>Rantz</title></head>
+<head>
+
+    <title>HR app
+    </title>
+
+</head>
 <body>
-<h2>Rantz:</h2>
-    #foreach($division in $divisions)
-        $division.id
-    #end
-<br/>
+<div class="container">
+    <div class="row">
+        <div class="span10 offset1">
+            <div class="row" style="border-bottom: inactiveborder">
+                <div class="span7">
+                    <h2 align="center">New employee:</h2>
 
-<form method="POST" action="/addEmp">
 
-    #foreach( $error in $status.errorMessages )
-        <p>$error</p>
-    #end
+                #* #foreach($active in $actives)
+                     $active
+                 #end*#
+                    <br/>
 
-#*<b>#springMessage("firstName")</b>*#
-    #springFormInput("emp.firstName" "")<br/>
-    #springShowErrors("<br>" "")
+                    <form id="userForm" class="form-horizontal" method="POST" action="/addEmp">
 
-#*<b>#springMessage("lastName") </b>*#
-    #springFormInput("emp.lastName" "")<br/>
-    #springShowErrors("<br>" "")
-#*#springMessage("birthDate")*#
-    #springFormInput("emp.birthDate""")<br/>
-    #springShowErrors("<br>" "")
 
-    #springFormSingleSelect( "emp.division" $divisions "")<br/>
+                    #*<b>#springMessage("firstName")</b>*#
 
-    <input type="submit" class="btn btn-success"/>
-#*   $status.errorMessages
-   #if($status.errors.hasErrors())
-   ## Global error messages
-       #foreach($e in $status.errorMessages)
-           <p>${e}</p>
-       #end
-   ## Field error messages
-       #foreach($f in $status.errors.fieldErrors)
-           #springBind("emp.${f.field}")*#
-    #foreach($e in $status.errorMessages)
-        <p>${e}</p>
-    #end
-#* #end
-#end*#
-</form>
+                        <div class="control-group">
+                            <label for="firstName" class="control-label">First Name:</label>
 
-<div id="container">
-    <div id="demo_jui">
-        <table id="companies" class="display">
-            <thead>
-            <tr>
-                <th>id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Salary</th>
-                <th>Birth Date</th>
-                <th>Active</th>
-                <th>Division</th>
+                            <div class="controls">
+                                #springFormInput("emp.firstName" 'id="firstName"')<br/>
+                                #springShowErrors("<br>" "")
+                            </div>
+                        </div>
 
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+
+                    #*<b>#springMessage("lastName") </b>*#
+                        <div class="control-group">
+                            <label for="lastName" class="control-label">Last Name:</label>
+
+                            <div class="controls">
+                                #springFormInput("emp.lastName" 'id="lastName"')<br/>
+                                #springShowErrors("<br>" "")
+                            </div>
+                        </div>
+                    #*#springMessage("birthDate")*#
+                        <div class="control-group">
+                            <label for="birthdate" class="control-label">Birth date:</label>
+
+                            <div class="controls">
+                                #springFormInput("emp.birthDate" 'id="birthdate"')<br/>
+                                #springShowErrors("<br>" "")
+                            </div>
+                        </div>
+
+                        <div class="control-group">
+                            <label for="salary" class="control-label">Salary:</label>
+
+                            <div class="controls">
+                                #springFormInput("emp.salary" 'id="salary"')<br/>
+                                #springShowErrors("<br>" "")
+                            </div>
+                        </div>
+
+                        <div class="control-group">
+                            <label for="active" class="control-label">Is active?:</label>
+
+                            <div class="controls">
+                                #springFormRadioButtons("emp.active" $actives  "<br>"'id=actives') <br/>
+                            #*#springFormSingleSelect( "emp.division" $divisions 'id="divisions')<br/>*#
+                            </div>
+                        </div>
+
+                        <div class="control-group">
+                            <label for="divisions" class="control-label">Division:</label>
+
+                            <div class="controls">
+                                #springFormSingleSelect( "emp.division" $divisions 'id="divisions')<br/>
+                            </div>
+                        </div>
+                        <div class="row" style="border-top: InactiveBorder; border-bottom: inactiveborder">
+                            <div class="pagination-centered">
+                                <div class="control-group">
+                                    <div class="controls">
+                                        <input type="submit" id="submitButton" class="btn btn-success"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    #*   $status.errorMessages
+                       #if($status.errors.hasErrors())
+                       ## Global error messages
+                           #foreach($e in $status.errorMessages)
+                               <p>${e}</p>
+                           #end
+                       ## Field error messages
+                           #foreach($f in $status.errors.fieldErrors)
+                               #springBind("emp.${f.field}")*#
+
+                    #* #end
+                    #end*#
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="span8 offset2">
+
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover"
+                   id="emptable">
+                <thead>
+                <tr>
+                    <th>id</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Salary</th>
+                    <th>Birth Date</th>
+                    <th>Active</th>
+                    <th>Division</th>
+
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th>id</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Salary</th>
+                    <th>Birth Date</th>
+                    <th>Active</th>
+                    <th>Division</th>
+
+                </tr>
+                </tfoot>
+            </table>
+        </div>
     </div>
 </div>
+
 </body>
 
 
