--- a/src/main/webapp/WEB-INF/velocity/header.vm
+++ b/src/main/webapp/WEB-INF/velocity/header.vm
@@ -1,3 +1,4 @@
+
 <div class="navbar navbar-inverse">
     <div class="navbar-inner">
         <div class="container-fluid">
@@ -10,35 +11,15 @@
 
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li><a href="#"><i class="icon-home icon-white"></i> Home</a></li>
-                    <li class="active"><a href="#"><i class="icon-user icon white"></i> Administration</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                class="icon-shopping-cart icon white"></i> Orders <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/order">New order</a></li>
-                            <li class="divider"></li>
-                            <li><a href="/orders"><i class="icon-shopping-cart icon white"></i> My orders</a></li>
+                    <li class="active" id="homePage"><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
+                    <li><a href="/admin" id="adminPage"><i class="icon-user icon white"></i> Administration</a></li>
 
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-gift icon white"></i>
-                            Items <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/item">New item</a></li>
-                            <li class="divider"></li>
-                            <li><a href="/items">All items</a></li>
-
-                        </ul>
-                    </li>
 
                     <li class="divider-vertical"></li>
                 </ul>
                 <ul class="nav pull-right">
                     <li class="dropdown ">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown" style="color: #ffdead">
-                            <sec:authentication property="name"/>
                             <strong class="caret"></strong></a>
 
                         <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
