--- a/src/main/webapp/WEB-INF/velocity/layout.vm
+++ b/src/main/webapp/WEB-INF/velocity/layout.vm
@@ -9,6 +9,15 @@
 <link rel="stylesheet" type="text/css"
       href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-responsive.min.css"/>
 <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/examples/sticky-footer/sticky-footer.css"/>
+<link rel="stylesheet" type="text/css" href="../../resources/style.css"/>
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+<script src="../../resources/bootstrap.js"></script>
+<script src="../../resources/bootstrap_confirmation.js"></script>
+<script type="text/javascript" charset="utf8"
+        src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.js"></script>
+<script type="text/javascript" src="../../resources/DT_bootstrap.js"></script>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
